--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>jstagg.gitbub.io</h1>
-<p>Résumé? Yes you may!</p>
+<p>Résumé? <a href="https://github.com/jstagg/Resume/blob/master/Resume.pdf">Yes you may!</a></p>
 </body>
 </html>
