--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>jstagg.gitbub.io</h1>
+<h1>jstagg.github.io</h1>
 <p>Résumé? <a href="https://github.com/jstagg/Resume/blob/master/Resume.pdf">Yes you may!</a></p>
+
+<div align=center valign=center>
+<img source="/images/status.png" />
+<img source="/images/resume.png" />
+<img source="/images/email.png" />
+</div>
+
 </body>
 </html>
