--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <p>Résumé? <a href="https://github.com/jstagg/Resume/blob/master/Resume.pdf">Yes you may!</a></p>
 
 <div align=center valign=center>
-<img source="/images/status.png" />
-<img source="/images/resume.png" />
-<img source="/images/email.png" />
+<img src="/images/status.png" alt="status" />
+<img src="/images/resume.png" alt="resume" />
+<img src="/images/email.png" alt="email" />
 </div>
 
 </body>
