--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>jstagg.github.io</title>
+<style type="text/css">
+	#myoutercontainer { position:relative }
+	#myinnercontainer { position:absolute; top:50%; height:10em; margin-top:-5em }
+</style>
+</head>
 <body>
-<h1>jstagg.github.io</h1>
-<p>Résumé? <a href="https://github.com/jstagg/Resume/blob/master/Resume.pdf">Yes you may!</a></p>
 
-<div align=center valign=center>
-<img src="/images/status.png" alt="status" />
-<img src="/images/resume.png" alt="resume" />
-<img src="/images/email.png" alt="email" />
+<div id="myoutercontainer">
+	<div id="myinnercontainer">
+		<p>
+			<img src="/images/status.png" alt="status"  border="0" />
+			<a href="https://github.com/jstagg/Resume/blob/master/Resume.pdf"><img src="/images/resume.png" alt="resume" border="0" /></a>
+			<a href="mailto:github+jstagg@gmail.com"><img src="/images/email.png" alt="email"  border="0" /></a>
+		</p>
+	</div>
 </div>
 
 </body>
