--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>jstagg.github.io</title>
 <style type="text/css">
 	#myoutercontainer { position:relative }
-	#myinnercontainer { position:absolute; top:50%; height:10em; margin-top:-5em }
+	#myinnercontainer { position:absolute; top:50%; height:100%; margin-top:-50% }
 </style>
 </head>
 <body>
