--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div id="myoutercontainer">
-	<div id="myinnercontainer">
+	<div id="myinnercontainer" align="center">
 		<p>
 			<img src="/images/status.png" alt="status"  border="0" />
 			<a href="https://github.com/jstagg/Resume/blob/master/Resume.pdf"><img src="/images/resume.png" alt="resume" border="0" /></a>
