--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>jstagg.github.io</title>
 <style type="text/css">
 	#myoutercontainer { position:relative }
-	#myinnercontainer { position:absolute; top:50%; height:100%; margin-top:-50% }
+	#myinnercontainer { position:absolute; top:50%; height:50em; margin-top:-25em }
 </style>
 </head>
 <body>
