--- a/index.html
+++ b/index.html
@@ -2,21 +2,15 @@
 <html>
 <head>
 <title>jstagg.github.io</title>
-<style type="text/css">
-	#myoutercontainer { position:relative }
-	#myinnercontainer { position:absolute; top:50%; height:50em; margin-top:-25em }
-</style>
 </head>
 <body>
 
-<div id="myoutercontainer">
-	<div id="myinnercontainer" align="center">
-		<p>
-			<img src="/images/status.png" alt="status"  border="0" />
-			<a href="https://github.com/jstagg/Resume/blob/master/Resume.pdf"><img src="/images/resume.png" alt="resume" border="0" /></a>
-			<a href="mailto:github+jstagg@gmail.com"><img src="/images/email.png" alt="email"  border="0" /></a>
-		</p>
-	</div>
+<div align="center">
+	<p>
+		<img src="/images/status.png" alt="status"  border="0" style="vertical-align:middle" />
+		<a href="https://github.com/jstagg/Resume/blob/master/Resume.pdf"><img src="/images/resume.png" alt="resume" border="0" style="vertical-align:middle" /></a>
+		<a href="mailto:github+jstagg@gmail.com"><img src="/images/email.png" alt="email"  border="0" style="vertical-align:middle" /></a>
+	</p>
 </div>
 
 </body>
