--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 		<a href="mailto:github+jstagg@gmail.com"><img src="/images/email.png" alt="email"  border="0" style="vertical-align:middle" /></a>
 	</p>
 </div>
+	
+<div align="center">
+	<p>
+	<h2><a href="https://github.com/jstagg">My GitHub Repo</a></h2>
+	</p>
+</div>
 
 </body>
 </html>
