--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <div align="center">
 	<p>
 	<h2><a href="https://github.com/jstagg">My GitHub Repo</a></h2>
+	<h2><a href="https://jstagg.medium.com/">Me on Medium</a></h2>
 	<h2><a href="https://github.com/jstagg/Resume/blob/master/Resume-Jim_Stagg.pdf">My Résumé (oui, avec des accents)</a></h2>
 	<h2><a href="mailto:github+jstagg@gmail.com">Contact</a></h2>
 	</p>
